--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,4 @@ services:
       - BOT_TOKEN=${BOT_TOKEN}
       - BOT_NAME=${BOT_NAME}
       - NASA_API_KEY=${NASA_API_KEY}
+      - GIPHY_API_KEY=${GIPHY_API_KEY}
