--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,55 @@
 services:
-  composer:
-    image: composer:2
-    volumes:
-      - ./composer.json:/app/composer.json
-      - ./composer.lock:/app/composer.lock
-    working_dir: /app
-    command: ["composer", install]
-
-  web:
-    build:
-      context: .
-      dockerfile: dockerfile
-    container_name: tg-bot
-    volumes:
-      - ./app:/var/www/html
-      - ./vendor:/var/www/html/vendor
-      - ./certs/fullchain1.pem:/etc/ssl/certs/origin_certificate.pem
-      - ./certs/privkey1.pem:/etc/ssl/private/origin_private.key
+  proxy:
+    image: httpd:2.4
+    container_name: proxy
     ports:
       - "80:80"
       - "443:443"
+    volumes:
+      - ./proxy/certs:/usr/local/apache2/conf/certs:ro
+      - ./proxy/httpd.conf:/usr/local/apache2/conf/httpd.conf:ro
+      - ./proxy/vhost.conf:/usr/local/apache2/conf/extra/httpd-vhosts.conf:ro
+    depends_on:
+      - tg-bot
+      - vaultwarden
+    networks:
+      - backend
+
+  tg-bot:
+    build:
+      context: ./tgbot
+      dockerfile: Dockerfile
+    container_name: tg-bot
+    expose:
+      - "80"
+    volumes:
+      - ./tgbot/app:/var/www/html
+      - ./tgbot/vendor:/var/www/html/vendor
+      - ./tgbot/composer.json:/var/www/html/composer.json
+      - ./tgbot/composer.lock:/var/www/html/composer.lock
     environment:
       - BOT_TOKEN=${BOT_TOKEN}
       - BOT_NAME=${BOT_NAME}
       - NASA_API_KEY=${NASA_API_KEY}
       - GIPHY_API_KEY=${GIPHY_API_KEY}
+    restart: unless-stopped
+    networks:
+      - backend
+
+  vaultwarden:
+    image: vaultwarden/server:latest
+    container_name: vaultwarden
+    expose:
+      - "80"
+    environment:
+      - WEBSOCKET_ENABLED=true
+      - ROCKET_PORT=80
+    volumes:
+      - ./vaultwarden/data:/data
+    restart: unless-stopped
+    networks:
+      - backend
+
+networks:
+  backend:
+    driver: bridge
